# Zero-Kelvin

./: .gitignore  AI_RULES.md  Cargo.toml  DRAFTS.md  GEMINI.md  Justfile  LICENSE.docs  PKGBUILD.draft  README.md  TODO.md  audit_v0.2.md  build.rs  drafts.md  error.md  fixes1-6.md  security_fixes_report.md  test_symlinks.sh
.agent/skills/zks-manifest/: SKILL.md
.agent/skills/zks-qa/: SKILL.md
.agent/skills/zks-readability/: SKILL.md
.agent/skills/zks-system/: SKILL.md
.agent/skills/zks-testing/: SKILL.md
aur/: PKGBUILD
local_pkg/: PKGBUILD
man/: 0k-core.1  0k.1
src/: constants.rs  engine.rs  error.rs  executor.rs  lib.rs  logging.rs  manifest.rs  utils.rs
src/cli/: core.rs  mod.rs  zk.rs
templates/: allowed_root_cmds.yaml
tests/: 00_help.bats  01_create.bats  02_mount.bats  03_umount.bats  04_unpack.bats  05_luks.bats  06_freeze.bats  07_cleaning.bats  08_unfreeze.bats  09_check.bats  10_privilege.bats  11_fullcycle.bats  12-custom-errors.bats  12_luks_freeze.bats  13-luks-privilege.bats  13_luks_cleaning.bats  14-fallocate-error.bats  14_luks_unfreeze.bats  15_luks_check.bats  16_luks_fullcycle.bats  17_reproduce_force_delete.bats  file_type_detection.rs  run_shell_tests.fish
to_port/: get_root_cmd.fish  rm-if-empty.fish  squash_manager.fish  zero-kelvin-store.fish
