[package]
name = "zero-kelvin-stazis"
version = "0.1.4"
edition = "2024"
description = "Secure and efficient backup tool using SquashFS and LUKS/Rclone"

# --- Определение Библиотеки (Общий код) ---
# Имя библиотеки будет derived из [package] name: zero_kelvin_stazis
# В коде бинарников ты будешь использовать: use zero_kelvin_stazis::engine;
[lib]
path = "src/lib.rs"

# --- Определение Бинарников (Точки входа) ---

[[bin]]
name = "zks-rs"
path = "src/bin/zks-rs.rs"

[[bin]]
name = "squash_manager-rs"
path = "src/bin/squash_manager-rs.rs"

[dependencies]
# 1. Парсинг аргументов (замена argparse в fish)
# features = ["derive"] позволяет описывать флаги через структуры (struct)
clap = { version = "4.5", features = ["derive"] }

# 2. Обработка ошибок
# Позволяет писать Result<?> и использовать оператор '?' вместо кучи if/else
anyhow = "1.0"

# более удобное создание ошибок
thiserror = "2.0"

# 3. Работа с YAML (для list.yaml)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 4. Прогресс-бары (замена pv и rclone -P)
# Красивые прогресс-бары прямо в терминале
indicatif = "0.18"

# 4.1 Обработка сигналов (Ctrl+C)
ctrlc = "3.4"

# 5. Поиск бинарников (замена 'type -q' или 'which')
# Чтобы проверить, установлен ли mksquashfs или rclone
which = "8.0"

# 6. Работа с временными файлами
# Создает папки в /tmp или /var/tmp и САМА удаляет их при выходе
tempfile = "3.24"

# 7. Логирование (вместо echo)
log = "0.4"
env_logger = "0.11"

# 8. Генерация случайных чисел (для разных целей)
rand = "0.9"

[dev-dependencies]
# Инструменты для ТЕСТОВ
assert_cmd = "2.1"  # Позволяет запускать бинарник как процесс и проверять вывод
mockall = "0.14.0"
predicates = "3.1"  # Помогает сравнивать строки/файлы в тестах
