[package]
name = "zero-kelvin-testing"
version = "0.2.21"
edition = "2024"
description = "Secure and efficient backup tool using SquashFS and LUKS/Rclone"

# --- Определение Библиотеки (Общий код) ---
[lib]
name = "zero_kelvin"
path = "src/lib.rs"

# --- Определение Бинарников (Точки входа) ---

[[bin]]
name = "0k"
path = "src/bin/0k.rs"

[[bin]]
name = "0k-core"
path = "src/bin/0k-core.rs"

[[bin]]
name = "0k-safe-rm"
path = "src/bin/0k-safe-rm.rs"

[dependencies]
# 1. Парсинг аргументов (замена argparse в fish)
# features = ["derive"] позволяет описывать флаги через структуры (struct)
clap = { version = "4.5", features = ["derive"] }

# 2. Обработка ошибок
# Позволяет писать Result<?> и использовать оператор '?' вместо кучи if/else
anyhow = "1.0"

# более удобное создание ошибок
thiserror = "2.0"

# 3. Работа с YAML (для list.yaml)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 4. Прогресс-бары (замена pv и rclone -P)
# Красивые прогресс-бары прямо в терминале
indicatif = "0.18"

# 4.1 Парсинг прогресса из stdout (для mksquashfs)
regex = "1.11"

# 4.1 Обработка сигналов (Ctrl+C)
ctrlc = "3.4"

# 5. Поиск бинарников (замена 'type -q' или 'which')
# Чтобы проверить, установлен ли mksquashfs или rclone
which = "8.0"

# 6. Работа с временными файлами
# Создает папки в /tmp или /var/tmp и САМА удаляет их при выходе
tempfile = "3.24"
infer = "0.19"

# 7. Логирование (вместо echo)
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 8. Генерация случайных чисел (для разных целей)
rand = "0.9"
fs2 = "0.4.3"
walkdir = "2.5.0"
libc = "0.2.180"
nix = { version = "0.30", features = ["user"] }
mockall = { version = "0.14.0", optional = true }

[features]
testing = ["dep:mockall"]

[dev-dependencies]
# Инструменты для ТЕСТОВ
## Для unit-тестов
mockall = "0.14.0"

## Для интеграционных тестов сейчас используем сабмодули bats
# assert_cmd = "2.1"  # Позволяет запускать бинарник как процесс и проверять вывод
# predicates = "3.1"  # Помогает сравнивать строки/файлы в тестах
